JumpScript/tests/baselines/reference/implementClausePrecedingExtends.errors.txt
tests/cases/compiler/implementClausePrecedingExtends.jump(2,22): error TS1173: 'extends' clause must precede 'implements' clause.


==== tests/cases/compiler/implementClausePrecedingExtends.jump (1 errors) ====
    class C { foo: number }
    class D implements C extends C { }
                         ~~~~~~~
!!! error TS1173: 'extends' clause must precede 'implements' clause.